--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <h2>Cadastre sua <span>entidade</span> ou acesse dados <span>de parceiras</span></h2>
         <div class="actions">
     
-               <a href="#">Cadastrar entidade</a>
+               <a href="cadastro.html">Cadastrar entidade</a>
                <a href="#">Ver entidades cadastradas</a>
         </div>
         <footer>
