--- a/cadastro.html
+++ b/cadastro.html
@@ -16,6 +16,7 @@
 <main>
     <aside>
         <img src="imagens/img.png" alt="" srcset="">
+        <h1><span>We</span> Form</h1>
     </aside>
 
     <section id="pag2">
